--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,13 @@
-Alex:
- Support more builtins like "range", "len", etc..
- Parse module names in function uses, i.e. "np.dot", "parakeet.each"
- Support for trancendentals (log, exp, etc..)
- Support for unary negation
- Closures with nested adverbs don't work right
-
-Eric:
- Logic to detect whether to tile a subtree of code
- Ability to tile only subtrees of a function
- Proper handling of closure variables
+- Change ast_conversion so it immediately parses functions (instead of bundling up referenced functions as closure variables and parsing them later)
+- Parse module names in function uses, i.e. "np.dot", "parakeet.each"
+- Support for trancendentals (log, exp, etc..)
+- Support for unary negation
+- Garbage collection 
+- Add support for in-place math operators, i.e. +=, *=, etc... 
+- List comprehensions 
+- Indexing by boolean masks
+- Figure out why parallel launcher segfaults on column sums
+- Make a plan for starting parallel jobs from inside compiled code
+- Only run tiling on perfectly nested code
+- Maybe only use ML tile estimates?
+- Vectorization 
